generation can invoke generator