@@ -1,10 +1,12 @@
 package generator.generation;
 
+import generator.Dependency;
 import generator.TypePkg;
 import generator.PackagePath;
 import generator.types.TypeAttr;
 import generator.types.operations.OperationAttr;
 
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -31,12 +33,17 @@ public final class ConstValues implements Generation<TypeAttr.NormalType> {
     }
 
     @Override
-    public Set<TypeAttr.Type> getRefTypes() {
+    public Set<TypeAttr.Type> getDefineReferTypes() {
         Set<TypeAttr.Type> types = new HashSet<>();
         for (TypePkg<TypeAttr.NormalType> pkg : typePkg) {
-            types.addAll(pkg.type().getReferenceTypes());
+            types.addAll(pkg.type().getDefineReferTypes());
         }
-        return Set.copyOf(types);
+        return Collections.unmodifiableSet(types);
+    }
+
+    @Override
+    public void generate(Dependency dependency) {
+        System.err.println("todo: generate this");
     }
 
     @Override
